<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layCadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green40"
    tools:context=".Controller.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagemId"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/dog1" />

            <Button
                android:id="@+id/btnCarregarImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_button"
                android:fontFamily="sans-serif-black"
                android:onClick="onclick"
                android:text="Selecionar Foto"
                android:textColor="@color/greyLigth"
                android:textSize="18dp"
                tools:ignore="OnClick" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/aNome"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtCnome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:textColor="#100F0F" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/aEspecie"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtCespecie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/aRaca"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtCraca"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/aCor"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtCcor"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="49dp"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/aSexo"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/txtCsexo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="56dp"
                            android:layout_height="match_parent"
                            android:text="M" />

                        <RadioButton

                            android:layout_width="55dp"
                            android:layout_height="match_parent"
                            android:text="F" />
                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </LinearLayout>
            <!--<View
                android:id="@+id/vi_hline_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#ccc" />-->

            <Button
                android:id="@+id/txtCdata"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:background="@color/transparent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="Data de Nascimento"
                android:textColor="#454743"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnHomePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_button"
                android:fontFamily="sans-serif-black"
                android:onClick="onclick"
                android:text="Gestão de vacinas
"
                android:textColor="@color/greyLigth"
                android:textSize="18dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>